# flask-api

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/: app.py  requirements.txt
flask-template/: README.md  app.py  requirements.txt
templates/: about.html  base.html  home.html
